plugins {
    id "java-library"
    id 'maven-publish'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

sourceCompatibility = 11

group = 'org.opencadc'

version = '1.2.12'

description = 'OpenCADC TAP-1.1 tap schema server library'
def git_url = 'https://github.com/opencadc/tap'

dependencies {
    implementation 'org.opencadc:cadc-util:[1.8.4,2.0)'
    implementation 'org.opencadc:cadc-log:[1.1,2.0)'
    implementation 'org.opencadc:cadc-vosi:[1.3.2,2.0)'
    implementation 'org.opencadc:cadc-uws:[1.0,2.0)'
    implementation 'org.opencadc:cadc-uws-server:[1.2.4,2.0)'
    implementation 'org.opencadc:cadc-cdp:[1.2.3,2.0)'
    implementation 'org.opencadc:cadc-gms:[1.0,2.0)'
    implementation 'org.opencadc:cadc-rest:[1.3.1,2.0)'
    implementation 'org.apache.parquet:parquet-common:[1.13.0,)'
    api 'org.opencadc:cadc-dali:[1.1,2.0)'
    api 'org.opencadc:cadc-dali-parquet:[0.5.2,)'
    api 'org.opencadc:cadc-tap:[1.1.23,2.0)'
    
    implementation 'uk.ac.starlink:jcdf:[1.2.3,2.0)'
    implementation 'uk.ac.starlink:stil:[4.0,5.0)'

    testImplementation 'junit:junit:[4.0,5.0)'
    testImplementation 'xerces:xercesImpl:[2.0,3.0)'
    
    intTestImplementation 'org.postgresql:postgresql:[42.2.8,)'
}
